fix(model):fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
 
 * {
   box-sizing: border-box;
+}
+
+html{
   scroll-behavior: smooth;
+  overflow-x:hidden;
 }
 
 body {
